--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,23 @@
   <groupId>at.htlleonding</groupId>
   <artifactId>simple-quarkus-app</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+  <name>app</name>
+  <description>app -- Sample Quarkus CLI application</description>
+  <inceptionYear>2021</inceptionYear>
+  <url>https://github.com/htl-leonding/simple-quarkus-app</url>
+  <developers>
+    <developer>
+      <id>htl-leonding</id>
+      <name>Thomas Stütz</name>
+    </developer>
+  </developers>
+  <licenses>
+    <license>
+      <name>Apache-2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
   <properties>
     <compiler-plugin.version>3.11.0</compiler-plugin.version>
     <maven.compiler.release>17</maven.compiler.release>
@@ -157,6 +174,30 @@
         <executable-suffix>.exe</executable-suffix>
       </properties>
     </profile>
+<!--    <profile>-->
+<!--      <id>release</id>-->
+<!--      <build>-->
+<!--        <plugins>-->
+<!--          <plugin>-->
+<!--            <groupId>org.jreleaser</groupId>-->
+<!--            <artifactId>jreleaser-maven-plugin</artifactId>-->
+<!--            <version>1.6.0</version>-->
+<!--            <configuration>-->
+<!--              <jreleaser>-->
+<!--                <release>-->
+<!--                  <github>-->
+<!--                    <changelog>-->
+<!--                      <formatted>ALWAYS</formatted>-->
+<!--                      <preset>conventional-commits</preset>-->
+<!--                    </changelog>-->
+<!--                  </github>-->
+<!--                </release>-->
+<!--              </jreleaser>-->
+<!--            </configuration>-->
+<!--          </plugin>-->
+<!--        </plugins>-->
+<!--      </build>-->
+<!--    </profile>-->
     <profile>
       <id>native</id>
       <activation>
