deploy: add jreleaser.yml (Config-file)

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -25,9 +25,9 @@ release:
       contributors:
         format: '- {{contributorName}}{{#contributorUsernameAsLink}} ({{.}}){{/contributorUsernameAsLink}}'
 
-signing:
-  active: always
-  armored: true
+#signing:
+#  active: always
+#  armored: true
 
 distributions:
   app:
