deploy: add jreleaser.yml (Config-file)

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -16,7 +16,7 @@ project:
 release:
   github:
     overwrite: true
-    sign: true
+    sign: false
     discussionCategoryName: 'Announcements'
     changelog:
       formatted: 'ALWAYS'
