--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: 17
           distribution: temurin
           cache: maven
+
+
       - name: Build
         run: ./mvnw verify -B
 
@@ -27,4 +31,5 @@ jobs:
       - name: Run JReleaser
         uses: jreleaser/release-action@v2
         env:
+          JRELEASER_PROJECT_VERSION: 1.0.0
           JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
