--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,16 +15,34 @@ jobs:
       - uses: actions/checkout@v3
 
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: 17
+#          distribution: temurin
+#          cache: maven
+#
+#
+#      - name: Build
+#        run: ./mvnw verify -B
+
+      - uses: graalvm/setup-graalvm@v1
         with:
-          java-version: 17
-          distribution: temurin
-          cache: maven
+          version: 'latest'
+          java-version: '17'
+          components: 'native-image'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
-
-      - name: Build
-        run: ./mvnw verify -B
+      - name: Build App with graalvm
+        run: |
+          echo "GRAALVM_HOME: $GRAALVM_HOME"
+          echo "JAVA_HOME: $JAVA_HOME"
+          java --version
+          gu --version
+          native-image --version
+          ll
+          ./mvnw -Pnative -Pdist clean package
+          
 
         # Create a release
 
