--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,8 @@ jobs:
           java --version
           gu --version
           native-image --version
-          ll
+          ls -lah
+          pwd
           ./mvnw -Pnative -Pdist clean package
           
 
